# practical-room-ui-cpp

./: .gitignore  README.md  meson.build
po/: digitaltwin.pot  meson.build  zh.po
src/: active_objects.glade  active_objects.hpp  app.cpp  app.glade  app.gresource.xml  camera3d_properties.glade  camera3d_properties.hpp  data  digitaltwin.cpp  digitaltwin.hpp  json.h  meson.build  object_properties.glade  object_properties.hpp  placer_properties.glade  placer_properties.hpp  robot_properties.glade  robot_properties.hpp  scene_view.hpp  stacker_properties.glade  stacker_properties.hpp  template_view.glade  templates_view.hpp  test.cpp
src/data/cameras/: camera3d.urdf
src/data/end_effectors/: magnet.urdf  robotiq_85.urdf
src/data/end_effectors/gripper/: gripper.urdf
src/data/end_effectors/magnet/: magnet.stl
src/data/end_effectors/suction/: suction.urdf
src/data/objects/tray/: traybox.urdf
src/data/robots/: franka_panda.urdf  ur5.urdf
src/data/robots/ur5/: ur5.urdf  ur5（另一个复件）.urdf  ur5（复件）.urdf
src/data/scenes/: 姿态估计.json  无序抓取.json  深度图.json  混合拆垛.json
src/data/workpieces/: bin.urdf  stuff.urdf
src/data/workpieces/a/: a.urdf
src/data/workpieces/lego/: lego.urdf
